Fix bug with A/B testing

--- a/mcnmlaunch/blueprints/frontend/templates/index_b.html
+++ b/mcnmlaunch/blueprints/frontend/templates/index_b.html
@@ -2,7 +2,7 @@
 
 {% block css %}
     {{ super() }}
-    <link rel="canonical" href="http://myconomy.ru"/>
+    <link rel="canonical" href="http://myconomy.ru/a"/>
 	<style type="text/css">
 		body {
 			font-family: Helvetica, Arial, sans-serif;
