--- a/mcnmlaunch/templates/base_layout.html
+++ b/mcnmlaunch/templates/base_layout.html
@@ -301,9 +301,9 @@
 
 			    <div data-picture data-alt="Somming Soon... запуск проекта в ноябре 2012 года">
 			        <div data-src="{{ config.STATIC_URL }}/images/main_320x149.png"></div>
-			        <div data-src="{{ config.STATIC_URL }}/images/main_640x298.png"  data-media="(min-height: 599px)"></div>
+			        <div data-src="{{ config.STATIC_URL }}/images/main_640x298.png"  data-media="(min-height: 550px)"></div>
 			        <div data-src="{{ config.STATIC_URL }}/images/main_800x373.png"  data-media="(min-height: 740px)"></div>
-			        <div data-src="{{ config.STATIC_URL }}/images/main_1013x472.png" data-media="(min-height: 799px)"></div>
+			        <div data-src="{{ config.STATIC_URL }}/images/main_1013x472.png" data-media="(min-height: 780px)"></div>
 
 			        <!-- Fallback content for non-JS browsers. Same img src as the initial, unqualified source element. -->
 			        <noscript>
@@ -328,9 +328,9 @@
 
 				    <div data-picture data-alt="Somming Soon... запуск проекта в ноябре 2012 года">
 				        <div data-src="{{ config.STATIC_URL }}/images/goods_320x29.png"></div>
-				        <div data-src="{{ config.STATIC_URL }}/images/goods_640x59.png"  data-media="(min-height: 599px)"></div>
-				        <div data-src="{{ config.STATIC_URL }}/images/goods_800x73.png"  data-media="(min-height: 740px)"></div>
-				        <div data-src="{{ config.STATIC_URL }}/images/goods_1013x93.png" data-media="(min-height: 799px)"></div>
+				        <div data-src="{{ config.STATIC_URL }}/images/goods_640x59.png"  data-media="(min-height: 550px)"></div>
+				        <div data-src="{{ config.STATIC_URL }}/images/goods_800x73.png"  data-media="(min-height: 600px)"></div>
+				        <div data-src="{{ config.STATIC_URL }}/images/goods_1013x93.png" data-media="(min-height: 780px)"></div>
 
 				        <!-- Fallback content for non-JS browsers. Same img src as the initial, unqualified source element. -->
 				        <noscript>
@@ -339,9 +339,9 @@
 				    </div>
 
 		            <div id="social">
-		                <a id="fb" href="#"></a>
+		                <a id="fb" href="https://www.facebook.com/Myconomy"></a>
 		                <a id="ok" href="#"></a>
-		                <a id="vk" href="#"></a>
+		                <a id="vk" href="http://vk.com/myconomy"></a>
 		            </div>
 
 		        </div>
