New social icons and new design

--- a/mcnmlaunch/blueprints/frontend/templates/index_c.html
+++ b/mcnmlaunch/blueprints/frontend/templates/index_c.html
@@ -69,7 +69,7 @@
     </div>
     <div id="footer">
         <div class="cell">
-			</form>
+
 			<!-- Begin MailChimp Signup Form -->
 			<div class="b-z-subscribe__form">
 				<form id="signup" action="" method="get" name="joinForm" _lpchecked="1">
@@ -95,9 +95,9 @@
 		    </div>
 
             <div id="social">
-                <a id="fb" href="#"></a>
-                <a id="ok" href="#"></a>
-                <a id="vk" href="#"></a>
+                <a id="fb"  onclick="window.open(this.href, 'Опубликовать ссылку в Facebook', 'width=640,height=436,toolbar=0,status=0'); return false" href="https://www.facebook.com/sharer/sharer.php?u=http://myconomy.ru"></a>
+                <a id="ok" href="http://twitter.com/intent/tweet?text=Myconomy.ru+-+Удобно+и+просто+находить+лучшие+предложения+на+товары.+Здесь+и+сейчас.+Рядом.+В+одно+движение.+Специально+для+Вас."></a>
+                <a id="vk" onclick="window.open(this.href, 'Опубликовать ссылку во Вконтакте', 'width=800,height=400'); return false" href="http://vkontakte.ru/share.php?url=http://myconomy.ru"></a>
             </div>
 
         </div>
